# ecn_Dextar

./: .gitignore  .spyderproject  CMakeLists.txt  README.md  README.rst  configFile.txt  main.py  setup.py
Sarazin-Guda2017/: CMakeLists.txt  configFile.txt  dextarFile.mp
Sarazin-Guda2017/build_w/: CMakeCache.txt  Makefile  cmake_install.cmake
Sarazin-Guda2017/dextarFile/: dextarFile0.mp  dextarFile1.mp  dextarFile2.mp  dextarFile4.mp  drawFace0.mp  sim.py
Sarazin-Guda2017/img/: contourFace1.pgm  contourFace2.pgm  contourFace4.pgm  contourFace5.pgm
Sarazin-Guda2017/include/: configuration.h  galg.h  parser.h  script_generator.h
Sarazin-Guda2017/main/: chains.cpp
Sarazin-Guda2017/src/: configuration.cpp
config/: configFile.txt
dextarFile/: drawFace0.mp  drawFace6.mp  drawFace8.mp  sim.py
dextar_draw_face/: __init__.py  canny_segment.py  chain.py  chains.py  draw_face.mp  face_detection.py  find_chains.py  genetic_algorithm.py  mp_file_generator.py  track_bar.py  user_interface.py
dextar_draw_face/test/: test.py
img/: contourFace0.pgm  contourFace1.pgm  contourFace2.pgm  contourFace3.pgm  contourFace4.pgm  contourFace6.pgm  contourFace8.pgm  contourFace9.pgm
include/: chain.h  chain_sequence.h  face_detection.h  find_chains.h  ga.h  galg.h  indiv.h  parser.h  script_generator.h  travel.h
main/: chains.cpp
ok_code/: CMakeLists.txt  tsp.yaml
ok_code/build_w64/: CMakeCache.txt  Makefile  cmake_install.cmake  dextar_config.txt
ok_code/include/: chain.h  find_chains.h  galg.h  indiv.h  parser.h
ok_code/main/: chains.cpp
ok_code/src/: chain.cpp
src/: chain.cpp  chain_sequence.cpp  face_detection.cpp  find_chains.cpp
w64/: face.pbm
windows/: CMakeLists.txt
